# Control-Panel-RV

./: .gitignore  CMakeLists.txt  LICENSE  README.md
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  disp_driver.c  disp_driver.h  ili9488.c
components/lvgl_esp32_drivers/lvgl_touch/: Kconfig  touch_driver.c
main/: CMakeLists.txt  aws_iot.c  aws_iot.h  ble.c  ble.h  botao.c  botao.h  main.c  mqtt_cloud.c  mqtt_cloud.h  rgb_led.c  rgb_led.h  screen.c  screen.h  sensor_bme280.c  sensor_bme280.h  sensor_hcsr04.c  sensor_hcsr04.h  sensor_mq2.c  sensor_mq2.h  water_pump.c  water_pump.h  wifi.c  wifi.h
